--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,18 @@
-asgiref==3.2.7
-astroid==2.4.1
-colorama==0.4.3
-Django==3.0.6
-isort==4.3.21
-lazy-object-proxy==1.4.3
-mccabe==0.6.1
-Pillow==7.1.2
-pylint==2.5.2
-pytz==2020.1
+asgiref==3.4.1
+certifi==2020.12.5
+chardet==4.0.0
+click==7.1.2
+dj-database-url==0.5.0
+Django==3.2.5
+django-heroku==0.3.1
+gTTS==2.2.2
+gunicorn==20.1.0
+idna==2.10
+Pillow==8.3.0
+psycopg2==2.9.1
+pytz==2021.1
+requests==2.25.1
 six==1.15.0
-sqlparse==0.3.1
-toml==0.10.1
-wrapt==1.12.1
+sqlparse==0.4.1
+urllib3==1.26.3
+whitenoise==5.2.0
